# loopforge-tauri-im

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  NEEDS_CSES_IM_SERVER_FIX_channels_view_read_echo.md  NEEDS_CSES_IM_SERVER_FIX_member_event_broadcast.md  NEEDS_CSES_IM_SERVER_FIX_post_read_channelId.md  NEED_FIX_UC-12.1_health_relay.md  README.md  SESSION.md  angular.json  clippy.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  wdio.conf.mjs
.claude/commands/: loop-engine.md
.claude/workflows/: im-body-build-down.js  loop-engine.js  pure-ui-audit.js  uc-rollout-l2.js  uc-rollout-overnight.js  ui-a1-design.js  ui-a2-bind.js
.github/workflows/: ci.yml
.superpowers/sdd/: progress-all-uc-ui-ux.md  review-task8-43c18f5..9214c1b.diff  task-1-report.md  task-2-report.md  task-3-report.md  task-5-report.md  task-6-report.md  task-7-report.md  task-8-loopforge-report.md  task-8-report.md
config/: dev-local.json  pre.json  prod.json
crates/helix-driver-instrument/: Cargo.toml  README.md
crates/helix-driver-instrument/src/: blob.rs  clock.rs  ctx.rs  event.rs  event_sink.rs  http.rs  id.rs  lib.rs  log_sink.rs  recording.rs  storage.rs  tape.rs  trace_event.rs  transport.rs  util.rs
crates/helix-driver-instrument/tests/: roundtrip.rs
design/: README.md
design/export/: 01-main-shell.html
docs/: 0628全链路最终成果.md  CHECKLIST.md  INTEGRATION-STATUS.md  NORTH-STAR.md  PRD.md  README.md  RUNBOOK.md  uc-coverage-ledger.md  ui-指令映射全景.md  月报-2026-06-团队分享.md  纯渲染壳-重构工作量与纯度验证.md  纯渲染壳-铁律与helix迁移台账.md
docs/agents/: domain.md  issue-tracker.md  pipeline-closed-loop.md  triage-labels.md
docs/architecture-review/: pure-ui-audit-2026-06-26.md  review-2026-06-25-1020.md
docs/cutover/: cses-im-server-cutover-checklist.md  cses-im-server-cutover-spec.md
docs/harness/: C001-helix-dep-single-snapshot.md  C002-readiness-probe-decoupled.md  C003-live-verify-seeded-db.md  C004-contract-readonly-helix-mark-only.md  C005-reducer-cross-shape-normalize.md  C006-uc-rollout-discipline.md  C007-angular-template-event-needs-method.md  C008-test-falsifiability.md  C009-autofix-no-self-judge.md  C010-golden-tape-real-capture.md  C011-ledger-honest-accounting.md  C012-commit-gate-machine-enforced.md  C013-pure-render-shell-no-logic.md  C014-per-uc-state-isolation.md  C015-observability-hop-coverage.md  README.md  TEMPLATE.md  log.md
docs/loop-engine/: FLOW.md  IMPL-STATUS.md  SPEC.md  STATUS.md  events.jsonl  flow.mmd
docs/migration/: NEED_CSES_IM_SERVER_FIX.md
docs/orchestration/: 6-facet-oracle.md  README.md  conductor.md
docs/spec/: angular-ui-plan.md  send-message-vertical-slice.md
docs/superpowers/: README.md
docs/trace/: otel-trace-gate.md  trace-scope-contract.md
docs/uc-rollout/: 00-rollout-plan.md  01-priority-rationale.md  README.md  all-uc-real-chain-status.md  apifox-http-suite-runbook.md  autonomous-runbook.md  coverage-crossmap.md  gap-closure-prd.md  l2-evidence-runbook.md  rollout-checklist.md  ui-e2e-real-flow-runbook.md  ui-ux-split-runbook.md
rules/: README.md  contract-readonly-autofix.md  four-facet-oracle.md  golden-replay-determinism.md  port-decorator-seam.md
scripts/: _lib.sh  apifox-failure-probes.md  apifox-suite-create.py  capture-ui-screenshots.mjs  conductor-tick.sh  dev-loop.sh  gate.sh  harness.sh  install-hooks.sh  l2-act.sh  l2-observe-678.mjs  multi-end-loop.sh  otel-pc-send-trace-smoke.sh  otel-trace-check.mjs  otel-trace-smoke.sh  probe-ws-reconnect-uc-send-1.sh  record.sh  render-board.sh  replay.sh  run-apifox-go-only.sh  run-uc-1.5-offline.sh  run.sh  scan-real-chain-violations.mjs  seed-align-cursor.sh  seed-behind-cursor.sh  seed-snapshot.sh  summarize-run-report.mjs  trace-env.sh  trace-jsonl-check.mjs  trace-static-gate.sh  uc-spec-list.mjs
scripts/hooks/: pre-push
scripts/loop-engine/: README.md  controller.mjs  controller.test.mjs  diagnosis-router.mjs  diagnosis-router.test.mjs  events-consistency.mjs  events-consistency.test.mjs  gap-emitter.mjs  gap-emitter.test.mjs  optimizer.mjs  optimizer.test.mjs  retrospector.mjs  retrospector.test.mjs  run.mjs  run.test.mjs  scheduler.mjs  scheduler.test.mjs  state-ledger.mjs  state-ledger.test.mjs  verifier.mjs  verifier.test.mjs
src/: index.html  main.ts  styles.css
src-tauri/: AGENTS.md  CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  engine.rs  lib.rs  main.rs  state.rs  tick_tee.rs  trace.rs  ws_reconnect.rs
src/app/: app.component.ts
test/: AGENTS.md
test/expect/: uc-1.10-cancel.expect.json  uc-1.10.expect.json  uc-1.2.expect.json  uc-1.4.expect.json  uc-1.5-offline.expect.json  uc-1.5.expect.json  uc-1.7.expect.json  uc-1.8.expect.json  uc-1.9.expect.json  uc-10.1.expect.json  uc-10.2.expect.json  uc-10.3.expect.json  uc-11.1.expect.json  uc-11.2.expect.json  uc-12.1.expect.json  uc-2.1.expect.json  uc-2.2.expect.json  uc-2.3.expect.json  uc-2.4.expect.json  uc-3.1-l2.expect.json  uc-3.1.expect.json  uc-3.2-l2.expect.json  uc-3.2.expect.json  uc-3.3.expect.json  uc-4.1.expect.json  uc-4.2.expect.json  uc-4.4.expect.json  uc-4.5.expect.json  uc-5.1.expect.json  uc-5.2.expect.json  uc-5.3.expect.json  uc-5.3b-l2.expect.json  uc-5.4.expect.json  uc-5.5.expect.json  uc-5.5b.expect.json  uc-5.6r.expect.json  uc-5.6w.expect.json  uc-5.7.expect.json  uc-5.8.expect.json  uc-6.1.expect.json  (+8 more)
test/fixtures/: .gitkeep  uc-send-1.sample.jsonl
test/helpers/: dom-evidence.mjs  l2-evidence.mjs
test/orchestration/: render-board.test.mjs
test/reducer/: corr-key.mjs  four-facet-reducer.mjs  four-facet-reducer.test.mjs
test/specs/: uc-1.10-cancel.e2e.mjs  uc-1.10.e2e.mjs  uc-1.2.e2e.mjs  uc-1.4.e2e.mjs  uc-1.5-offline-setup.e2e.mjs  uc-1.5-offline.e2e.mjs  uc-1.5.e2e.mjs  uc-1.7.e2e.mjs  uc-1.8.e2e.mjs  uc-1.9.e2e.mjs  uc-10.1.e2e.mjs  uc-10.2.e2e.mjs  uc-10.3.e2e.mjs  uc-11.1.e2e.mjs  uc-11.2-l2.e2e.mjs  uc-11.2.e2e.mjs  uc-12.1.e2e.mjs  uc-2.1.e2e.mjs  uc-2.2.e2e.mjs  uc-2.3.e2e.mjs  uc-2.4.e2e.mjs  uc-3.1-l2.e2e.mjs  uc-3.1.e2e.mjs  uc-3.2-l2.e2e.mjs  uc-3.2.e2e.mjs  uc-3.3.e2e.mjs  uc-4.1.e2e.mjs  (+26 more)
(+55 files in other folders)
