[package]
name = "loopforge-tauri-im"
version = "0.1.0"
description = "LoopForge — 最小可测 Tauri IM 宿主（内嵌真实 helix 引擎 · debug 仪表化）"
edition = "2021"

[lib]
# `_lib` 后缀避免 Windows 上 lib 名与 bin 名冲突（Tauri 官方约定）。
name = "loopforge_tauri_im_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# helix 引擎（git branch dep · 只读消费 · 零改 · CLAUDE.md §0）
# 指向 helix 仓 **feat/cses-round6-uc-reclaim** 分支（reclaim 进行中分支）——而非 path dep。
# 为什么不用 path：path 直读主 checkout 工作树，主 checkout 切分支 / 开 worktree 时 loopforge
# 吃到的 helix 会跟着漂，测试不稳定。改 git branch ref + **Cargo.lock pin 具体 commit** →
# loopforge 测的是冻结的稳定 helix 快照；要升级 helix 时显式 `cargo update -p helix-core helix-im
# helix-driver-native helix-driver-host`（一次升一组），不被主 checkout 的分支切换扰动。
helix-core          = { git = "file:///Users/mac28/workspace/rustWorkspace/helix", branch = "feat/cses-round6-uc-reclaim" }
helix-im            = { git = "file:///Users/mac28/workspace/rustWorkspace/helix", branch = "feat/cses-round6-uc-reclaim" }
helix-driver-native = { git = "file:///Users/mac28/workspace/rustWorkspace/helix", branch = "feat/cses-round6-uc-reclaim" }
# 泛型引擎壳（run_engine_loop<S,H,E,Tr,C> + EngineDeps + RecordingSink）——
# 组装根直连此泛型入口，把全 port 包上装饰器（native EngineConfig 具体类型注不进装饰器）。
helix-driver-host   = { git = "file:///Users/mac28/workspace/rustWorkspace/helix", branch = "feat/cses-round6-uc-reclaim" }

# 仪表层（本仓 · Recording<P> + InstrumentCtx + LogSink）
helix-driver-instrument = { path = "../crates/helix-driver-instrument" }

# tauri-plugin-webdriver 经 `webdriver` feature 闸（默认开）：release 出货须 `--no-default-features`
# 关掉，绝不带 W3C 自动化接口（CLAUDE.md §2.4）。
# 注：cargo 的 `target.'cfg(debug_assertions)'` 不支持依赖选择（实测 warn），故改 feature 闸 +
# 代码 `#[cfg(feature = "webdriver")]` 双保险——feature 关 = dep 不进树 + init 调用编译掉。
tauri-plugin-webdriver = { version = "0.2.1", optional = true }

[features]
default = ["webdriver"]
# 录放/自动化测试接口（debug/test 专用）；release 出货 `--no-default-features` 去掉。
webdriver = ["dep:tauri-plugin-webdriver"]

[lints]
workspace = true
