[package]
name = "loopforge-tauri-im"
version = "0.1.0"
description = "LoopForge — 最小可测 Tauri IM 宿主（内嵌真实 helix 引擎 · debug 仪表化）"
edition = "2021"

[lib]
# `_lib` 后缀避免 Windows 上 lib 名与 bin 名冲突（Tauri 官方约定）。
name = "loopforge_tauri_im_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# helix 引擎（git branch dep · 只读消费 · 零改 · CLAUDE.md §0）
# 指向 helix 仓 **feat/cses-round6-uc-reclaim** 分支（reclaim 进行中分支）——而非 path dep。
# 为什么不用 path：path 直读主 checkout 工作树，主 checkout 切分支 / 开 worktree 时 loopforge
# 吃到的 helix 会跟着漂，测试不稳定。改 git branch ref + **Cargo.lock pin 具体 commit** →
# loopforge 测的是冻结的稳定 helix 快照；要升级 helix 时显式改同一个 rev（一次升一组），
# 不被主 checkout 的分支切换扰动。
# 当前 pin: helix 50737c3（origin/main 最新；含 mobile real-chain WS bus events + trace hooks/gates）。
helix-core          = { git = "file:///System/Volumes/Data/workspace/rust/helix", rev = "50737c3e0d6aad775da45fd5575964b43db80ea8" }
helix-im            = { git = "file:///System/Volumes/Data/workspace/rust/helix", rev = "50737c3e0d6aad775da45fd5575964b43db80ea8" }
helix-driver-native = { git = "file:///System/Volumes/Data/workspace/rust/helix", rev = "50737c3e0d6aad775da45fd5575964b43db80ea8" }
# 泛型引擎壳（run_engine_loop<S,H,E,Tr,C> + EngineDeps + RecordingSink）——
# 组装根直连此泛型入口，把全 port 包上装饰器（native EngineConfig 具体类型注不进装饰器）。
helix-driver-host   = { git = "file:///System/Volumes/Data/workspace/rust/helix", rev = "50737c3e0d6aad775da45fd5575964b43db80ea8" }

# 仪表层（本仓 · Recording<P> + InstrumentCtx + LogSink）
helix-driver-instrument = { path = "../crates/helix-driver-instrument" }

# 间接依赖版本钉死（非本仓直接使用，仅为约束 cargo 解析）：
# tauri/wry 的 cookie 0.18.1 调 1 参 time::Parsable::parse，而 time 0.3.52 把该方法
# 改成 2 参（多 defaults: Option<Parsed>）→ 无 Cargo.lock 时 cargo 贪新 0.3.52 编崩 cookie。
# plist 1.9.0 要 time≥0.3.47，取夹缝下界精确钉 0.3.47（Cargo.lock 被 .gitignore·不靠 lock）。
time = { version = "=0.3.47", default-features = false }

# tauri-plugin-webdriver 经 `webdriver` feature 闸（默认开）：release 出货须 `--no-default-features`
# 关掉，绝不带 W3C 自动化接口（CLAUDE.md §2.4）。
# 注：cargo 的 `target.'cfg(debug_assertions)'` 不支持依赖选择（实测 warn），故改 feature 闸 +
# 代码 `#[cfg(feature = "webdriver")]` 双保险——feature 关 = dep 不进树 + init 调用编译掉。
tauri-plugin-webdriver = { version = "0.2.1", optional = true }

[features]
default = ["webdriver"]
# 录放/自动化测试接口（debug/test 专用）；release 出货 `--no-default-features` 去掉。
webdriver = ["dep:tauri-plugin-webdriver"]

[lints]
workspace = true
