[package]
name = "helix-driver-instrument"
version = "0.1.0"
edition = "2021"
description = "Recording<P> port 装饰器：日志/金标帧录制/回放三合一，包在 helix 的 port 边界上（helix 引擎零改）"

[dependencies]
# helix-core 必须与 src-tauri 走**同一** git branch 快照（feat/cses-round6-uc-reclaim，
# Cargo.lock pin 248fc84），否则 path dep 拉本地工作树的 helix-core 会与 src-tauri 的
# git helix-core 形成两份 helix_core → Recording<P> 的 Clock/Storage 等 impl 无法满足
# helix-driver-host::run_engine_loop 的 trait bound（E0277 multiple versions）。
# 统一到 git 快照另有稳定性收益：另一条 workflow 正在改 helix 工作树，path dep 会让
# 构建吃到漂移的 helix；git pin 给冻结快照，验证期不被扰动（CLAUDE.md §0 release 形态）。
# 临时 repoint：与 src-tauri 同步指向 helix branch fix/im-send-echo-reconcile（HEAD 36162c9·必须
# 同一 git 快照·否则两份 helix_core → E0277 multiple versions）。验回归后一起改回主线。
helix-core  = { git = "file:///Users/mac28/workspace/rustWorkspace/helix", branch = "main" }
serde       = { workspace = true }
serde_json  = { workspace = true }
bytes       = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
# 测试用轻量 block_on（不引 tokio，装饰器本身 executor-agnostic）。
futures = "0.3"

[lints]
workspace = true
