[package]
name = "helix-driver-instrument"
version = "0.1.0"
edition = "2021"
description = "Recording<P> port 装饰器：日志/金标帧录制/回放三合一，包在 helix 的 port 边界上（helix 引擎零改）"

[dependencies]
# helix-core 必须与 src-tauri 走**同一** git rev 快照，否则 path dep 拉本地工作树的 helix-core 会与 src-tauri 的
# git helix-core 形成两份 helix_core → Recording<P> 的 Clock/Storage 等 impl 无法满足
# helix-driver-host::run_engine_loop 的 trait bound（E0277 multiple versions）。
# 统一到 git 快照另有稳定性收益：另一条 workflow 正在改 helix 工作树，path dep 会让
# 构建吃到漂移的 helix；git pin 给冻结快照，验证期不被扰动（CLAUDE.md §0 release 形态）。
# 当前 pin: helix 7c8a037（必须与 src-tauri 同一 git 快照）。
helix-core  = { git = "file:///System/Volumes/Data/workspace/rust/helix", rev = "7c8a03730581fd442de2f9b4ec4326697c008ff0" }
serde       = { workspace = true }
serde_json  = { workspace = true }
bytes       = { workspace = true }
async-trait = { workspace = true }
opentelemetry = { version = "0.32", optional = true }
opentelemetry_sdk = { version = "0.32", features = ["trace"], optional = true }
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["trace", "grpc-tonic"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }

[features]
default = []
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tokio"]

[dev-dependencies]
# 测试用轻量 block_on（不引 tokio，装饰器本身 executor-agnostic）。
futures = "0.3"

[lints]
workspace = true
